# panda

./: README.md  pyproject.toml
assets/: coordinate.fbx  coordinate2.fbx  cube.gltf  cube_noconv.fbx
ursina_cube/: ex.py  main.py  pd.py
