[tool.poetry]
name = "ursina-cube"
version = "0.1.0"
description = ""
authors = ["TE-KazuhiroYabe <Kazuhiro.Yabe@sony.com>"]
readme = "README.md"
packages = [{include = "ursina_cube"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ursina = "^5.3.0"
numpy = "^1.25.1"
toio-py = "^1.0.2"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
